# daily-njnyc-dance-classes

./: .gitignore  Makefile  README.md
.github/workflows/: studioscraper.yaml
backend/: README.md  ilovedancenj.html  main.py  pyproject.toml  requirements.txt
backend/data/: danceclasses.py
backend/models/: models.py
backend/scrapers/: bdc.py  daily_dance_classes.py  driver.py  ilovedance.py  modega.py  scrape_all.py  utility.py
backend/supabasedb/: supabase.py
docker/: backend.dockerfile  docker-compose.yaml  frontend.dockerfile
docker/env/: generate_user_env.sh  static.env  user.env
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/class-table/: columns.tsx  data-table.tsx  date-range-filter.tsx  instructor-filter.tsx  pagination.tsx  search-bar.tsx  studio-filter.tsx  time-range-filter.tsx
frontend/src/lib/: formatting.ts
frontend/src/pages/: Home.tsx
