[project]
name = "daily-nynyc-dance-classes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.123.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "supabase>=2.25.0",
]
